// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It adds class name 1`] = `
<div>
  <div
    class="MuiTableContainer-root"
  >
    <table
      class="MuiTable-root"
      data-id="table"
    >
      <tbody
        class="MuiTableBody-root"
        data-id="table-body"
      >
        <tr
          class="MuiTableRow-root myCustomClass"
          data-id="table-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-22 TableCell-withPadding-27 TableCell-withVerticalAlign-21 TableCell-withVerticalAlign-26 TableCell-withFontSize-24 TableCell-withFontSize-28 TableCell-withoutFirstLastPadding-23"
            data-id="table-cell"
          >
            Hello world
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`It renders 1`] = `
<div>
  <div
    class="MuiTableContainer-root"
  >
    <table
      class="MuiTable-root"
      data-id="table"
    >
      <tbody
        class="MuiTableBody-root"
        data-id="table-body"
      >
        <tr
          class="MuiTableRow-root"
          data-id="table-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-8 TableCell-withPadding-13 TableCell-withVerticalAlign-7 TableCell-withVerticalAlign-12 TableCell-withFontSize-10 TableCell-withFontSize-14 TableCell-withoutFirstLastPadding-9"
            data-id="table-cell"
          >
            Hello world
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
